// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game core figures have right move patterns 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Game core figures have right move patterns 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Game core figures have right move patterns 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -20,11 +20,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            B
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -32,21 +32,25 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,30 +30,30 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            B
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 7`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 9`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -71,11 +71,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-0\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            P
          </div>
        </div>
@@ -165,11 +165,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-1\\"
        />
@@ -205,11 +209,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-1\\"
        />"
`;

exports[`Game core figures have right move patterns 10`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -83,11 +83,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-1\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            P
          </div>
        </div>
@@ -170,11 +170,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-2\\"
        />
@@ -210,11 +214,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-2\\"
        />"
`;

exports[`Game core figures have right move patterns 11`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -95,11 +95,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-2\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            P
          </div>
        </div>
@@ -175,11 +175,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-3\\"
        />
@@ -215,11 +219,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-3\\"
        />"
`;

exports[`Game core figures have right move patterns 12`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -107,11 +107,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-3\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            P
          </div>
        </div>
@@ -180,11 +180,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-4\\"
        />
@@ -220,11 +224,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-4\\"
        />"
`;

exports[`Game core figures have right move patterns 13`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -119,11 +119,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-4\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            P
          </div>
        </div>
@@ -185,11 +185,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-5\\"
        />
@@ -225,11 +229,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-5\\"
        />"
`;

exports[`Game core figures have right move patterns 14`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -131,11 +131,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-5\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            P
          </div>
        </div>
@@ -190,11 +190,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-6\\"
        />
@@ -230,11 +234,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-6\\"
        />"
`;

exports[`Game core figures have right move patterns 15`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -143,11 +143,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-6\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            P
          </div>
        </div>
@@ -195,11 +195,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-7\\"
        />
@@ -235,11 +239,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-7\\"
        />"
`;

exports[`Game core figures have right move patterns 16`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -155,11 +155,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-7\\"
        >
          <div
-           class=\\"sc-bdnyFh kKdZfs\\"
+           class=\\"sc-bdnyFh itvPoW\\"
            side=\\"white\\"
          >
            P
          </div>
        </div>
@@ -200,11 +200,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-0\\"
        />
@@ -240,11 +244,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-0\\"
        />"
`;

exports[`Game core figures have right move patterns 17`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 18`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 19`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 20`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 21`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 22`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 23`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 24`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 25`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 26`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 27`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 28`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 29`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 30`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 31`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 32`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 33`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 34`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 35`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 36`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 37`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 38`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 39`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 40`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 41`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 42`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 43`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 44`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 45`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 46`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 47`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 48`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 49`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -245,11 +245,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-1\\"
        />
@@ -285,11 +289,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-1\\"
        />
@@ -327,11 +335,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-0\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            P
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 50`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -250,11 +250,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-2\\"
        />
@@ -290,11 +294,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-2\\"
        />
@@ -339,11 +347,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-1\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            P
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 51`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -255,11 +255,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-3\\"
        />
@@ -295,11 +299,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-3\\"
        />
@@ -351,11 +359,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-2\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            P
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 52`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -260,11 +260,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-4\\"
        />
@@ -300,11 +304,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-4\\"
        />
@@ -363,11 +371,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-3\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            P
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 53`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -265,11 +265,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-5\\"
        />
@@ -305,11 +309,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-5\\"
        />
@@ -375,11 +383,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-4\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            P
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 54`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -270,11 +270,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-6\\"
        />
@@ -310,11 +314,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-6\\"
        />
@@ -387,11 +395,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-5\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            P
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 55`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -275,11 +275,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-7\\"
        />
@@ -315,11 +319,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-7\\"
        />
@@ -399,11 +407,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-6\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            P
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 56`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -280,11 +280,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-0\\"
        />
@@ -320,11 +324,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-0\\"
        >
@@ -411,11 +419,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-7\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            P
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 57`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 58`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >"
`;

exports[`Game core figures have right move patterns 59`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -433,11 +433,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            B
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 60`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -445,21 +445,25 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            K
          </div>
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >"
`;

exports[`Game core figures have right move patterns 61`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -443,23 +443,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"7-4\\"
        >
          <div
            class=\\"sc-bdnyFh klihbc\\"
            side=\\"black\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"7-4\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >"
`;

exports[`Game core figures have right move patterns 62`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,24 +30,24 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
        <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
-       <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
          <div
@@ -443,30 +443,30 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"7-4\\"
        >
          <div
            class=\\"sc-bdnyFh klihbc\\"
            side=\\"black\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"7-4\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >
          <div
-           class=\\"sc-bdnyFh klihbc\\"
+           class=\\"sc-bdnyFh bHrsje\\"
            side=\\"black\\"
          >
            B
          </div>
        </div>"
`;

exports[`Game core figures have right move patterns 63`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -443,23 +443,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"7-4\\"
        >
          <div
            class=\\"sc-bdnyFh klihbc\\"
            side=\\"black\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"7-4\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >"
`;

exports[`Game core figures have right move patterns 64`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,23 +30,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"0-4\\"
        >
          <div
            class=\\"sc-bdnyFh kKdZfs\\"
            side=\\"white\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"0-4\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
@@ -443,23 +443,23 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"7-4\\"
        >
          <div
            class=\\"sc-bdnyFh klihbc\\"
            side=\\"black\\"
          >
            K
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"7-4\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >"
`;

exports[`Game core should render board with start positions 1`] = `
<DocumentFragment>
  <div
    class="sc-jSFipO gkqyRK"
    data-testid="chess-board"
  >
    <div
      class="sc-eCAqax hnnYBr"
    >
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-0"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-1"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-2"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          B
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-3"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          K
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-4"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-5"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          B
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-6"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-7"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-0"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-1"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-2"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-3"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-4"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-5"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-6"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-7"
      >
        <div
          class="sc-bdnyFh kKdZfs"
          side="white"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-0"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-1"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-2"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-3"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-4"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-5"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-6"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-7"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-0"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-1"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-2"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-3"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-4"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-5"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-6"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-7"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-0"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-1"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-2"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-3"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-4"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-5"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-6"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-7"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-0"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-1"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-2"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-3"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-4"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-5"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-6"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-7"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-0"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-1"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-2"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-3"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-4"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-5"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-6"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-7"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          P
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-0"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-1"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-2"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          B
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-3"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          K
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-4"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-5"
      >
        <div
          class="sc-bdnyFh klihbc"
          side="black"
        >
          B
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-6"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-7"
      />
    </div>
  </div>
</DocumentFragment>
`;
